--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/mahns1201/mahns.github.io#readme",
   "dependencies": {
+    "@notionhq/client": "^3.1.3",
     "@tailwindcss/postcss": "^4.1.8",
     "next": "^15.3.3",
     "postcss": "^8.5.4",
