--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/postcss": "^4.1.8",
     "D": "^1.0.0",
     "next": "^15.3.3",
+    "notion-to-md": "^3.1.9",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
