--- a/package.json
+++ b/package.json
@@ -23,23 +23,27 @@
   "dependencies": {
     "@notionhq/client": "^3.1.3",
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "^4.1.8",
     "D": "^1.0.0",
+    "github-markdown-css": "^5.8.1",
     "next": "^15.3.3",
     "notion-to-md": "^3.1.9",
-    "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.8"
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@tailwindcss/cli": "^4.1.10",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "22.15.30",
     "@types/react": "19.1.6",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
+    "postcss": "^8.5.6",
     "prettier": "3.5.3",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0"
   }
