--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "start": "next start",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,css,html,yml,yaml,scss,sass}\" --ignore-path .gitignore"
   },
   "repository": {
@@ -26,6 +27,7 @@
     "D": "^1.0.0",
     "github-markdown-css": "^5.8.1",
     "next": "^15.3.3",
+    "next-sitemap": "^4.2.3",
     "notion-to-md": "^3.1.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
