--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mahns.github.io",
+  "name": "mahns-vercel-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,19 +8,19 @@
     "start": "next start",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,css,html,yml,yaml,scss,sass}\" --ignore-path .gitignore"
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mahns1201/mahns.github.io.git"
+    "url": "https://github.com/mahns1201/mahns-vercel-app"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mahns1201/mahns.github.io/issues"
+    "url": "https://github.com/mahns1201/mahns-vercel-app/issues"
   },
-  "homepage": "https://github.com/mahns1201/mahns.github.io#readme",
+  "homepage": "https://github.com/mahns1201/mahns-vercel-app#readme",
   "dependencies": {
     "@notionhq/client": "^3.1.3",
     "@svgr/webpack": "^8.1.0",
@@ -41,8 +41,8 @@
     "@types/react": "19.1.6",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
+    "eslint-config-next": "^15.3.4",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.1",
     "postcss": "^8.5.6",
     "prettier": "3.5.3",
     "tailwindcss": "^4.1.10",
