--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "dependencies": {
     "@notionhq/client": "^3.1.3",
     "@svgr/webpack": "^8.1.0",
-    "D": "^1.0.0",
     "github-markdown-css": "^5.8.1",
     "next": "^15.3.3",
     "next-sitemap": "^4.2.3",
@@ -36,7 +35,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
-    "@tailwindcss/cli": "^4.1.10",
     "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "22.15.30",
     "@types/react": "19.1.6",
@@ -48,7 +46,6 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.10",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.0"
+    "typescript": "^5.8.3"
   }
 }
