--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "22.15.30",
     "@types/react": "19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
     "eslint-config-next": "^15.3.4",
