--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "notion-to-md": "^3.1.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
